Refactor SchemaValidator to improve error message formatting; enhance JsonServicesTest and SchemaValidatorTest with real implementations and additional assertions for better validation coverage.